# interaction

./: .gitignore  AGENT.md  README.md  pyproject.toml
.cursor/rules/: project-tracking.mdc
docs/: architecture.md  bugs.md  changelog.md  command-vocabulary.md  development-plan.md  evaluation-plan.md  interaction-model.md  llm-api-guide.md  mvp-readiness.md  product-spec.md  safety-model.md  todo.md
docs/plans/: 1-project-scaffold.md  10-1-phase-7-spec-review.md  10-2-live-webcam-calibration-and-cli.md  10-3-webcam-mvp-docs-and-harness.md  10-4-phase-7-code-review-gate.md  10-phase-7-webcam-mvp-completion.md  11-1-phase-8-spec-review.md  11-2-live-fusion-cli-and-runtime.md  11-3-live-fusion-docs-and-harness.md  11-4-phase-8-code-review-gate.md  11-phase-8-live-multimodal-demo.md  2-product-definition-docs.md  3-runtime-contracts.md  4-1-phase-1-spec-review.md  4-2-command-broker-core.md  4-3-macos-control-slice.md  4-4-phase-1-code-review-gate.md  4-phase-1-command-broker.md  5-1-phase-2-spec-review.md  5-phase-2-voice-mvp.md  (+27 more)
scripts/: phase1_macos_smoke.py  phase2_voice_smoke.py  phase3_gaze_smoke.py  phase3_webcam_smoke.py  phase4_fusion_smoke.py  phase5_productization_smoke.py  phase6_live_voice_smoke.py  phase7_live_webcam_smoke.py  phase7_webcam_calibrate.py  phase8_live_fusion_smoke.py
tests/: __init__.py  test_command_broker.py  test_contracts.py  test_fusion_loop.py  test_gaze_loop.py  test_live_fusion_mvp.py  test_live_speech.py  test_macos_platform.py  test_opencv_provider.py  test_productization.py  test_version.py  test_voice_loop.py  test_webcam_mvp.py
(+50 files in other folders)
