[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interaction"
version = "0.1.0"
description = "Multimodal computer interaction via realtime voice and gaze control."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
  "pydantic>=2.8",
]

[project.scripts]
interaction = "interaction.app:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
